@@ -1,4 +1,8 @@
 2021-08-20 Dusan Jocic <dusanjocic@msn.com>
+	* [Console] Improved engine console copying into system os clipboard
+	* [Console] Add possibility to copy engine console into system os clipboard
+
+2021-08-20 Dusan Jocic <dusanjocic@msn.com>
 	* [Cumulative Update] Misc changes
 
 2021-07-22 Dusan Jocic <dusanjocic@msn.com>
